[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/Type Machine.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/Login.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.0
margin_bottom = -25.0
texture = ExtResource( 2 )

[node name="newAccount" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 773.0
margin_top = 928.0
margin_right = -693.0
margin_bottom = -60.0
custom_fonts/font = SubResource( 7 )
text = "Create new account"

[node name="login" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 72.0
margin_right = 3.0
margin_bottom = -720.0
custom_fonts/font = SubResource( 1 )
text = "login"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="userName" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 375.0
margin_top = 431.0
margin_right = -1228.0
margin_bottom = -571.0
custom_fonts/font = SubResource( 2 )
text = "username"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="usernameInput" type="LineEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 755.0
margin_top = 431.0
margin_right = -674.0
margin_bottom = -573.0
custom_fonts/font = SubResource( 4 )

[node name="password" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 375.0
margin_top = 599.0
margin_right = -1228.0
margin_bottom = -406.0
custom_fonts/font = SubResource( 3 )
text = "password"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="passwordInput" type="LineEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 755.0
margin_top = 599.0
margin_right = -674.0
margin_bottom = -406.0
secret = true

[node name="loginSuccess" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 487.0
margin_top = 251.0
margin_right = -576.0
margin_bottom = -695.0
custom_fonts/font = SubResource( 5 )

[node name="send" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 866.0
margin_top = 751.0
margin_right = -793.0
margin_bottom = -234.0
custom_fonts/font = SubResource( 6 )
text = "Send"

[connection signal="pressed" from="newAccount" to="." method="_on_newAccount_pressed"]
[connection signal="pressed" from="send" to="." method="_on_send_pressed"]
